# nopal

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
crates/: Cargo.toml
crates/api/: Cargo.toml  build.rs
crates/api/protos/: account.proto
crates/api/schemas/: user.surql
crates/api/src/: account.rs  db.rs  lib.rs  main.rs  services.rs
crates/api/src/account/: models.rs  repository.rs  service.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
db/: .env-example  Dockerfile  Makefile  README.md  fly.toml  migrate.sh  seed.surql  start.sh
db/migrations/: 0000_init.surql  0001_building_system.surql  0002_nopal_phases.surql  0002_vault.surql  0003_calendars.surql
db/queries/: uncooked.md
docs/: thermal-properties-reference.md
prompts/: projects-seed-to-renewal.md
remix/: package.json
remix/app/: root.tsx
remix/app/components/: layout.tsx
remix/app/routes/: login.tsx  spines._index.tsx  thorns._index.tsx  thorns.bg.tsx  thorns.tsx
webapp/: .env-example  Dockerfile  fly.toml  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.json  vite.config.js
webapp/.react-router/types/: +routes.ts
webapp/app/: root.tsx  tailwind.css
webapp/app/articles/: captains-log-no-1.md  newspaper-clipping-no-1.md
webapp/app/calculators/: CutStockOptimizer.test.ts  CutStockOptimizer.tsx
webapp/app/components/: Annotation.tsx  AppLayout.tsx  AudioFormat.tsx  Autocomplete.tsx  Badge.tsx  Breadcrumb.tsx  Carousel.tsx  Chip.tsx  Dropdown.tsx  FiveFactors.tsx  Footer.tsx  FramesVisualPreview.tsx  (+20 more)
webapp/public/: robots.txt
(+318 files in other folders)
