[package]
name = "nopal-api"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
prost-types = "0.12"
surrealdb = "1.5.4"

[build-dependencies]
tonic-build = "0.11"

[lints]
workspace = true
